--- a/analysis/basic_algorithm/data_cleaning.ipynb
+++ b/analysis/basic_algorithm/data_cleaning.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "6edb6e50-4e27-43c9-8a42-c1c847a0e234",
+       "ref": "df37de46-0db9-417e-8dc8-3eb3e045fb44",
        "rows": [
         [
          "0",
@@ -165,13 +165,14 @@
        "4    Go-liath   男   天津  有个细节 变成鼠标功能的时候下面是加了底座的，然后后面有又分离了，我是说突出来一块直接接触桌..."
       ]
      },
+     "execution_count": 5,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(r\"D:\\GitHubRepos\\is6941-ml-social-media\\\\analysis\\data\\BV1dZwLeKEzG_comments.csv\")\n",
-    "display(df.head())"
+    "df = pd.read_csv(r\"D:\\GitHubRepos\\is6941-ml-social-media\\analysis\\data\\BV1dZwLeKEzG_comments.csv\")\n",
+    "df.head()"
    ]
   },
   {
