--- a/taptap/analytics/ensemble_learning_models/catboost.ipynb
+++ b/taptap/analytics/ensemble_learning_models/catboost.ipynb
@@ -2,35 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 924,
    "id": "2e4c68ce",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name '__version__' from 'sklearn' (unknown location)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcatboost\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m CatBoostClassifier, Pool\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodel_selection\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m train_test_split\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetrics\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m classification_report, accuracy_score, f1_score, confusion_matrix\n",
-      "File \u001b[0;32m/opt/anaconda3/envs/IS6941/lib/python3.11/site-packages/sklearn/model_selection/__init__.py:8\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# Authors: The scikit-learn developers\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# SPDX-License-Identifier: BSD-3-Clause\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtyping\u001b[39;00m\n\u001b[0;32m----> 8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_classification_threshold\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m      9\u001b[0m     FixedThresholdClassifier,\n\u001b[1;32m     10\u001b[0m     TunedThresholdClassifierCV,\n\u001b[1;32m     11\u001b[0m )\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_plot\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m LearningCurveDisplay, ValidationCurveDisplay\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_search\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m GridSearchCV, ParameterGrid, ParameterSampler, RandomizedSearchCV\n",
-      "File \u001b[0;32m/opt/anaconda3/envs/IS6941/lib/python3.11/site-packages/sklearn/model_selection/_classification_threshold.py:9\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnumbers\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Integral, Real\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mbase\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m     10\u001b[0m     BaseEstimator,\n\u001b[1;32m     11\u001b[0m     ClassifierMixin,\n\u001b[1;32m     12\u001b[0m     MetaEstimatorMixin,\n\u001b[1;32m     13\u001b[0m     _fit_context,\n\u001b[1;32m     14\u001b[0m     clone,\n\u001b[1;32m     15\u001b[0m )\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mexceptions\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m NotFittedError\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetrics\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m     18\u001b[0m     check_scoring,\n\u001b[1;32m     19\u001b[0m     get_scorer_names,\n\u001b[1;32m     20\u001b[0m )\n",
-      "File \u001b[0;32m/opt/anaconda3/envs/IS6941/lib/python3.11/site-packages/sklearn/base.py:16\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcollections\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m defaultdict\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m---> 16\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m __version__\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_config\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m config_context, get_config\n\u001b[1;32m     18\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mexceptions\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m InconsistentVersionWarning\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name '__version__' from 'sklearn' (unknown location)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from catboost import CatBoostClassifier, Pool\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import classification_report, accuracy_score, f1_score, confusion_matrix"
+    "from sklearn.metrics import classification_report, accuracy_score, f1_score, confusion_matrix\n",
+    "import jieba\n",
+    "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 925,
    "id": "7ada9548",
    "metadata": {},
    "outputs": [],
@@ -47,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 926,
    "id": "3d5fded7",
    "metadata": {},
    "outputs": [],
@@ -60,11 +47,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 927,
+   "id": "4c432863",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 仅保留文本内容和目标变量\n",
+    "df = df[['review_content', 'sentiment']].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 928,
    "id": "472a14cc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 划分特征和目标\n",
+    "X = df.drop('sentiment', axis=1)\n",
+    "y = df['sentiment']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 929,
+   "id": "2d3aa1d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 数据集划分\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.2, random_state=42, stratify=y\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 930,
+   "id": "727027bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 创建CatBoost数据池（仅包含文本特征）\n",
+    "train_pool = Pool(\n",
+    "    X_train, y_train,\n",
+    "    text_features=['review_content']\n",
+    ")\n",
+    "\n",
+    "test_pool = Pool(\n",
+    "    X_test, y_test,\n",
+    "    text_features=['review_content']\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 931,
+   "id": "12be2ed2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 中文优化模型配置\n",
+    "model = CatBoostClassifier(\n",
+    "    task_type='CPU',\n",
+    "    iterations=10,          # 增加迭代次数配合更大的学习率\n",
+    "    learning_rate=0.05,      # 提升学习率加速收敛\n",
+    "    depth=8,                # 降低树深平衡复杂度\n",
+    "    eval_metric='F1',\n",
+    "    loss_function='Logloss',  # 自定义分类边界\n",
+    "    # simple_ctr='Counter:CtrBorderCount=15:Prior=0.5',  # 改进CTR计算\n",
+    "    class_weights=[1.2, 1.1],  # 调整权重比例\n",
+    "    l2_leaf_reg=12,         # 增强正则化\n",
+    "    random_strength=2.0,    # 提升随机性防止过拟合\n",
+    "    thread_count=8,         # 减少线程数防止内存竞争\n",
+    "    bootstrap_type='MVS',   # 更高效的采样方式\n",
+    "    subsample=0.5,         # 子采样比例\n",
+    "    max_ctr_complexity=2,   # 允许二阶特征组合\n",
+    "    leaf_estimation_method='Newton',  # 改进叶子值计算方法\n",
+    "    leaf_estimation_iterations=8,     # 增加迭代次数\n",
+    "    # early_stopping_rounds=30,        # 添加早停机制\n",
+    "    verbose=1\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 932,
+   "id": "03f30d32",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0:\tlearn: 0.8386147\ttest: 0.8389960\tbest: 0.8389960 (0)\ttotal: 212ms\tremaining: 1.91s\n",
+      "9:\tlearn: 0.8390412\ttest: 0.8390513\tbest: 0.8391612 (2)\ttotal: 1.77s\tremaining: 0us\n",
+      "\n",
+      "bestTest = 0.8391611991\n",
+      "bestIteration = 2\n",
+      "\n",
+      "Shrink model to first 3 iterations.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<catboost.core.CatBoostClassifier at 0x154221b90>"
+      ]
+     },
+     "execution_count": 932,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 训练模型\n",
+    "model.fit(train_pool, eval_set=test_pool, verbose=50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 933,
+   "id": "8bd986ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "测试集分类报告:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.70      0.71      0.70      2726\n",
+      "           1       0.85      0.84      0.84      5271\n",
+      "\n",
+      "    accuracy                           0.80      7997\n",
+      "   macro avg       0.77      0.78      0.77      7997\n",
+      "weighted avg       0.80      0.80      0.80      7997\n",
+      "\n",
+      "混淆矩阵:\n",
+      " [[1939  787]\n",
+      " [ 840 4431]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 预测和评估\n",
+    "y_pred = model.predict(test_pool)\n",
+    "print(\"\\n测试集分类报告:\")\n",
+    "print(classification_report(y_test, y_pred))\n",
+    "print(\"混淆矩阵:\\n\", confusion_matrix(y_test, y_pred))"
+   ]
   }
  ],
  "metadata": {
