--- a/taptap/analytics/data_cleaning/integrate.ipynb
+++ b/taptap/analytics/data_cleaning/integrate.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "5a677a62",
+   "metadata": {},
+   "source": [
+    "#### 这个Notebook中的代码用于合并40个游戏评论数据集，并添加 **游戏名称** 列标签"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "fa2597fd",
