--- a/taptap/analytics/pretrained_language_models/bert-base-chinese.ipynb
+++ b/taptap/analytics/pretrained_language_models/bert-base-chinese.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 29,
    "id": "7a8576c4",
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "from transformers import BertTokenizer, BertForSequenceClassification, Trainer, TrainingArguments\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import classification_report, confusion_matrix\n",
@@ -19,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 30,
    "id": "9b6d6131",
    "metadata": {},
    "outputs": [
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 31,
    "id": "67307505",
    "metadata": {},
    "outputs": [],
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 32,
    "id": "ea3bb53c",
    "metadata": {},
    "outputs": [],
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 33,
    "id": "3ac56dc2",
    "metadata": {},
    "outputs": [],
@@ -95,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 34,
    "id": "80a80e64",
    "metadata": {},
    "outputs": [],
@@ -110,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 35,
    "id": "a5f697f6",
    "metadata": {},
    "outputs": [
@@ -118,11 +119,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\wjw20\\miniconda3\\envs\\IS6941\\Lib\\site-packages\\huggingface_hub\\file_download.py:896: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
-      "  warnings.warn(\n",
-      "Some weights of the model checkpoint at bert-base-chinese were not used when initializing BertForSequenceClassification: ['cls.predictions.transform.dense.bias', 'cls.predictions.transform.dense.weight', 'cls.seq_relationship.bias', 'cls.predictions.bias', 'cls.seq_relationship.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.LayerNorm.bias']\n",
-      "- This IS expected if you are initializing BertForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
-      "- This IS NOT expected if you are initializing BertForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
       "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-chinese and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
@@ -146,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 36,
    "id": "58b3f314",
    "metadata": {},
    "outputs": [],
@@ -158,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 37,
    "id": "2ccf08f1",
    "metadata": {},
    "outputs": [],
@@ -169,7 +165,7 @@
     "    per_device_train_batch_size=32,\n",
     "    per_device_eval_batch_size=64,\n",
     "    num_train_epochs=3,\n",
-    "    evaluation_strategy=\"epoch\",\n",
+    "    eval_strategy=\"epoch\",\n",
     "    fp16=True,  # 自动启用pin_memory\n",
     "    dataloader_pin_memory=True,  # 显式启用内存固定\n",
     "    # learning_rate=3e-5,  # 初始学习率从默认的5e-5调低\n",
@@ -181,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 38,
    "id": "8e732d71",
    "metadata": {},
    "outputs": [],
@@ -199,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "07146ef0",
    "metadata": {},
    "outputs": [],
@@ -216,49 +212,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 40,
    "id": "1f835f8c",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\wjw20\\miniconda3\\envs\\IS6941\\Lib\\site-packages\\transformers\\optimization.py:411: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1533fcb6320f466d848d93e159ae884f",
-       "version_major": 2,
-       "version_minor": 0
-      },
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='3000' max='3000' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [3000/3000 07:46, Epoch 3/3]\n",
+       "    </div>\n",
+       "    <table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       " <tr style=\"text-align: left;\">\n",
+       "      <th>Epoch</th>\n",
+       "      <th>Training Loss</th>\n",
+       "      <th>Validation Loss</th>\n",
+       "      <th>Accuracy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>0.396500</td>\n",
+       "      <td>0.365370</td>\n",
+       "      <td>0.834188</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>0.301000</td>\n",
+       "      <td>0.380965</td>\n",
+       "      <td>0.836939</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>0.174400</td>\n",
+       "      <td>0.472908</td>\n",
+       "      <td>0.839815</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table><p>"
+      ],
       "text/plain": [
-       "  0%|          | 0/3000 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'loss': 0.441, 'learning_rate': 4.166666666666667e-05, 'epoch': 0.5}\n",
-      "{'loss': 0.3935, 'learning_rate': 3.3333333333333335e-05, 'epoch': 1.0}\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aaaeceae573f49fdbc57eaad6d9bbb3d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/125 [00:00<?, ?it/s]"
+       "<IPython.core.display.HTML object>"
       ]
      },
      "metadata": {},
@@ -272,101 +271,53 @@
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.78      0.73      0.75      2740\n",
-      "           1       0.86      0.89      0.88      5257\n",
+      "           0       0.75      0.78      0.76      2740\n",
+      "           1       0.88      0.86      0.87      5257\n",
       "\n",
-      "    accuracy                           0.84      7997\n",
-      "   macro avg       0.82      0.81      0.82      7997\n",
-      "weighted avg       0.84      0.84      0.84      7997\n",
+      "    accuracy                           0.83      7997\n",
+      "   macro avg       0.81      0.82      0.82      7997\n",
+      "weighted avg       0.84      0.83      0.84      7997\n",
       "\n",
       "Confusion Matrix:\n",
-      "[[1999  741]\n",
-      " [ 560 4697]]\n",
-      "{'eval_loss': 0.36735033988952637, 'eval_accuracy': 0.8373139927472802, 'eval_runtime': 15.6136, 'eval_samples_per_second': 512.183, 'eval_steps_per_second': 8.006, 'epoch': 1.0}\n",
-      "{'loss': 0.3063, 'learning_rate': 2.5e-05, 'epoch': 1.5}\n",
-      "{'loss': 0.2937, 'learning_rate': 1.6683333333333333e-05, 'epoch': 2.0}\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "70704d542492422c95b3fa3c50aba655",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/125 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[[2140  600]\n",
+      " [ 726 4531]]\n",
       "\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.80      0.72      0.76      2740\n",
-      "           1       0.86      0.90      0.88      5257\n",
+      "           0       0.81      0.69      0.74      2740\n",
+      "           1       0.85      0.91      0.88      5257\n",
       "\n",
       "    accuracy                           0.84      7997\n",
-      "   macro avg       0.83      0.81      0.82      7997\n",
-      "weighted avg       0.84      0.84      0.84      7997\n",
+      "   macro avg       0.83      0.80      0.81      7997\n",
+      "weighted avg       0.83      0.84      0.83      7997\n",
       "\n",
       "Confusion Matrix:\n",
-      "[[1968  772]\n",
-      " [ 501 4756]]\n",
-      "{'eval_loss': 0.3690436780452728, 'eval_accuracy': 0.8408153057396524, 'eval_runtime': 15.9317, 'eval_samples_per_second': 501.956, 'eval_steps_per_second': 7.846, 'epoch': 2.0}\n",
-      "{'loss': 0.1862, 'learning_rate': 8.350000000000001e-06, 'epoch': 2.5}\n",
-      "{'loss': 0.1867, 'learning_rate': 1.6666666666666667e-08, 'epoch': 3.0}\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "940a3278555d4bac9137167ea3697810",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/125 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[[1883  857]\n",
+      " [ 447 4810]]\n",
       "\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.78      0.76      0.77      2740\n",
+      "           0       0.78      0.74      0.76      2740\n",
       "           1       0.87      0.89      0.88      5257\n",
       "\n",
       "    accuracy                           0.84      7997\n",
-      "   macro avg       0.83      0.82      0.82      7997\n",
+      "   macro avg       0.82      0.82      0.82      7997\n",
       "weighted avg       0.84      0.84      0.84      7997\n",
       "\n",
       "Confusion Matrix:\n",
-      "[[2072  668]\n",
-      " [ 585 4672]]\n",
-      "{'eval_loss': 0.43909624218940735, 'eval_accuracy': 0.8433162435913467, 'eval_runtime': 15.927, 'eval_samples_per_second': 502.104, 'eval_steps_per_second': 7.848, 'epoch': 3.0}\n",
-      "{'train_runtime': 667.4412, 'train_samples_per_second': 143.779, 'train_steps_per_second': 4.495, 'train_loss': 0.3012294667561849, 'epoch': 3.0}\n"
+      "[[2037  703]\n",
+      " [ 578 4679]]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "TrainOutput(global_step=3000, training_loss=0.3012294667561849, metrics={'train_runtime': 667.4412, 'train_samples_per_second': 143.779, 'train_steps_per_second': 4.495, 'train_loss': 0.3012294667561849, 'epoch': 3.0})"
+       "TrainOutput(global_step=3000, training_loss=0.30004727681477866, metrics={'train_runtime': 466.4451, 'train_samples_per_second': 205.735, 'train_steps_per_second': 6.432, 'total_flos': 1.262459465828352e+16, 'train_loss': 0.30004727681477866, 'epoch': 3.0})"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,19 +329,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 41,
    "id": "4641def6",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3e84b6e82b0e4f6db0860f344e68becd",
-       "version_major": 2,
-       "version_minor": 0
-      },
+      "text/html": [],
       "text/plain": [
-       "  0%|          | 0/125 [00:00<?, ?it/s]"
+       "<IPython.core.display.HTML object>"
       ]
      },
      "metadata": {},
@@ -404,41 +351,41 @@
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.78      0.76      0.77      2740\n",
+      "           0       0.78      0.74      0.76      2740\n",
       "           1       0.87      0.89      0.88      5257\n",
       "\n",
       "    accuracy                           0.84      7997\n",
-      "   macro avg       0.83      0.82      0.82      7997\n",
+      "   macro avg       0.82      0.82      0.82      7997\n",
       "weighted avg       0.84      0.84      0.84      7997\n",
       "\n",
       "Confusion Matrix:\n",
-      "[[2072  668]\n",
-      " [ 585 4672]]\n",
+      "[[2037  703]\n",
+      " [ 578 4679]]\n",
       "\n",
       "Final Test Set Evaluation:\n",
       "\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.78      0.76      0.77      2740\n",
+      "           0       0.78      0.74      0.76      2740\n",
       "           1       0.87      0.89      0.88      5257\n",
       "\n",
       "    accuracy                           0.84      7997\n",
-      "   macro avg       0.83      0.82      0.82      7997\n",
+      "   macro avg       0.82      0.82      0.82      7997\n",
       "weighted avg       0.84      0.84      0.84      7997\n",
       "\n",
       "Confusion Matrix:\n",
-      "[[2072  668]\n",
-      " [ 585 4672]]\n"
+      "[[2037  703]\n",
+      " [ 578 4679]]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'accuracy': 0.8433162435913467}"
+       "{'accuracy': 0.8398149305989746}"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,6 +395,33 @@
     "test_results = trainer.predict(test_dataset)\n",
     "print(\"\\nFinal Test Set Evaluation:\")\n",
     "compute_metrics(test_results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "4035728a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "保存测试集预测概率 (BERT)...\n",
+      "BERT 概率已保存到 predictions/probabilities_bert.npy\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --- Save Probabilities for Ensemble ---\n",
+    "print(\"\\n保存测试集预测概率 (BERT)...\")\n",
+    "# Trainer.predict returns logits in test_results.predictions\n",
+    "# Apply Softmax to get probabilities\n",
+    "logits = torch.tensor(test_results.predictions)\n",
+    "probabilities = torch.softmax(logits, dim=-1).numpy() # Convert to numpy array\n",
+    "np.save(r'D:\\GitHubRepos\\is6941-ml-social-media\\taptap\\analytics\\predictions\\probabilities_bert.npy', probabilities)\n",
+    "print(\"BERT 概率已保存到 predictions/probabilities_bert.npy\")"
    ]
   }
  ],
