--- a/taptap/dataset_release/check.ipynb
+++ b/taptap/dataset_release/check.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "b447d49b",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "a3c38d41",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "be71d0d4",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "30b42b4d",
    "metadata": {},
    "outputs": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "5aa78a1e",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "911923fa",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "49e009bc",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "0efa268d",
    "metadata": {},
    "outputs": [
@@ -185,7 +185,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "a3269102-2311-4f1a-8e4e-2791e5a28c8a",
+       "ref": "5f199867-e0f3-4938-9e0e-a8a7e2d1115c",
        "rows": [
         [
          "0",
@@ -452,7 +452,7 @@
        "9 2025-04-01 01:58:00         Vivo IQOO Neo9  7_years_from_now          1  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,12 +463,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "id": "158c7a9b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(r\"/Users/wangjingwen/Documents/GitHub/is6941-ml-social-media/taptap/dataset_release/taptap_game_reviews.csv\", index=False, encoding='utf-8-sig')"
+    "df_cleaned.to_csv(r\"/Users/wangjingwen/Documents/GitHub/is6941-ml-social-media/taptap/dataset_release/taptap_game_reviews.csv\", index=False, encoding='utf-8-sig')"
    ]
   }
  ],
